--- a/scripts/requirements-dev.txt
+++ b/scripts/requirements-dev.txt
@@ -87,12 +87,15 @@ requests==2.25.1
     # via
     #   -r ./scripts/requirements.txt
     #   pygithub
+retrying==1.3.3
+    # via -r ./scripts/requirements.txt
 six==1.16.0
     # via
     #   -r ./scripts/requirements.txt
     #   flake8-debugger
     #   flake8-tuple
     #   pynacl
+    #   retrying
 termcolor==1.1.0
     # via -r ./scripts/requirements.txt
 testfixtures==6.17.1
