--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -26,8 +26,12 @@ pyyaml==5.4.1
     # via -r ./scripts/requirements.in
 requests==2.25.1
     # via pygithub
+retrying==1.3.3
+    # via -r ./scripts/requirements.in
 six==1.16.0
-    # via pynacl
+    # via
+    #   pynacl
+    #   retrying
 termcolor==1.1.0
     # via -r ./scripts/requirements.in
 urllib3==1.26.5
